fix: styling on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -1,5 +1,4 @@
-html,
-body {
+html {
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -8,9 +7,14 @@ body {
 body {
 	color: #333;
 	margin: 0;
-	padding: 8px;
+	padding: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	width: 100vw;
+	height: 100vh;
+	background-color: #111213;
+	/* Remove unnecessary scrollbars */
+	margin: 0;
 }
 
 a {
@@ -116,14 +120,49 @@ a .button-wrapper {
 	background-color: #262324;
 }
 
+main {
+	padding: 8px;
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
+}
+
+@media (min-width: 640px) {
+	main {
+		max-width: 720px;
+	}
+}
+
 #content {
 	max-width: 100%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	gap: 20px;
+	gap: 4px;
 	border-radius: 4px;
-	padding: 24px;
+	padding: 4px;
+	color: white;
+	overflow: hidden;
+}
+
+@media (min-width: 640px) {
+	#content {
+		padding: 24px;
+		gap: 20px;
+	}
+}
+
+#content>* {
+	max-width: 100%;
+}
+
+#content p.readable {
+
+	max-width: 600px;
+}
+
+p {
 	color: white;
 }
 
@@ -133,4 +172,29 @@ a .button-wrapper {
 
 .gap-15 {
 	gap: 15px;
+}
+
+.flex-wrap {
+	flex-wrap: wrap;
+}
+
+.nowrap {
+	white-space: nowrap;
+}
+
+.justify-center {
+	justify-content: center;
+}
+
+h2 {
+	margin: 0;
+}
+
+#assets #units img {
+	max-width: 25%;
+}
+
+
+#assets img {
+	max-width: 100%;
 }
